# libCCORE

./: ..gitignore.un~  .gitignore  .gitignore~  CMakeLists.txt  README.md  run-tests.sh  tidy.sh
include/: CCORE.h  CORE-disjoint-set.h
include/CCORE/: CORE-debug.h  CORE-disjoint-set.h  CORE-file.h  CORE-list-private.h  CORE-list.h  CORE-map-private.h  CORE-map.h  CORE-memory.h  CORE-object-private.h  CORE-object.h  CORE-records.h  CORE-safe-array.h  CORE-slice-private.h  CORE-slice.h  CORE-string.h  CORE-system.h  CORE-types.h  CORE-vector.h
src/: CORE-debug.c  CORE-disjoint-set.c  CORE-list.c  CORE-map.c  CORE-memory.c  CORE-slice.c  CORE-system.c
tests/: CMakeLists.txt  test-core-array.c  test-core-list.c  test-core-map.c  test-core-memory.c  test-core-object-private.c  test-core-object.c  test-core-slice.c  test-core-string.c  test-core-vector.c  tests-main.c
